# poker-room-backend

./: Makefile  README.md  conftest.py  docker-compose.yml  init-databases.sql  pytest.ini  requirements-test.txt
.github/workflows/: tests.yml
services/auth-service/: Dockerfile  alembic.ini  requirements.txt
services/auth-service/alembic/: env.py
services/auth-service/app/: main.py
services/betting-service/: Dockerfile  alembic.ini  requirements.txt
services/betting-service/alembic/: env.py
services/betting-service/app/: main.py
services/game-service/: Dockerfile  alembic.ini  requirements.txt
services/game-service/alembic/: env.py
services/gateway-service/: Dockerfile  requirements.txt
services/room-service/: Dockerfile  alembic.ini
services/user-service/: Dockerfile  alembic.ini  requirements.txt
shared/: pyproject.toml
shared/core/: time.py
shared/core/auth/: roles.py
shared/core/db/: crud.py  session.py
shared/core/messaging/: consumer.py  events.py  mq.py
shared/core/outbox/: helpers.py  model.py  worker.py
shared/schemas/: auth.py  bets.py  games.py  rooms.py  users.py
tests/: helpers.py  service_loader.py
tests/integration/: test_auth_service_integration.py  test_betting_order_integration.py  test_game_integration.py  test_game_room_status_sync_integration.py  test_game_round_start_authorization_integration.py  test_game_service_routes_integration.py  test_game_stack_persistence_integration.py  test_postgres_concurrency.py  test_room_service_integration.py  test_user_service_integration.py
(+181 files in other folders)
