[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for the poker room microservices"
requires-python = ">=3.13,<3.15"
dependencies = [
  "aio-pika>=9.6.2,<10",
  "fastapi>=0.135.3,<0.136",
  "sqlalchemy[asyncio]>=2.0.49,<2.1",
  "pydantic>=2.12.5,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-cov>=7.1.0,<8",
  "pytest-mock>=3.15.1,<4",
  "httpx>=0.28.1,<0.29",
  "aiosqlite>=0.22.1,<0.23",
  "coverage>=7.13.5,<8",
]

[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
shared = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
